--- a/development.mdx
+++ b/development.mdx
@@ -1,52 +1,73 @@
 ---
-title: "Guía para Jefes Técnicos"
-description: "Procedimiento Operativo Estándar para la gestión de mantenimiento."
+title: "SOP · Jefes Técnicos en Mantenimiento Hotelero"
+description: "Guía clara para que los jefes técnicos coordinen y gestionen eficientemente el mantenimiento hotelero."
 ---
 
 # Procedimiento Operativo Estándar para Jefes Técnicos en Mantenimiento Hotelero
 
+## Objective
+
 Este SOP proporciona una guía clara para que los jefes técnicos coordinen y gestionen eficientemente el mantenimiento hotelero.
 
----
+## Key Steps
 
-## Pasos Clave
+**1. Introducción al Panel de Jefe Técnico**
 
-<Steps>
-### Paso 1: Introducción y Liderazgo Técnico
-Bienvenido al panel de jefe técnico. Eres el corazón operativo del mantenimiento hotelero. Tu liderazgo técnico es crucial; toma el control y haz la diferencia.
+- Bienvenido al panel de jefe técnico.
+- Eres el corazón operativo del mantenimiento hotelero.
+- Desde aquí, coordinarás todo el ecosistema técnico de tu hotel.
 
-### Paso 2: Control y Gestión del Equipo
-Tienes el control total del equipo de mantenimiento. Tu misión incluye asignar, supervisar y priorizar las tareas para asegurar la excelencia operativa del hotel.
+**2. Control del Equipo de Mantenimiento**
 
-### Paso 3: Gestión de Inspecciones y Problemas
-Gestiona inspecciones programadas y distribuye las tareas entre tu equipo. Asegúrate de que cada problema se resuelva de manera eficiente y oportuna.
+- Tienes el control total del equipo de mantenimiento.
+- Tu misión incluye:
+  - Asignar y priorizar tareas.
+  - Supervisar el trabajo de los técnicos.
 
-### Paso 4: Uso del Centro de Comando
-Utiliza el centro de comando para:
-- Acceder a métricas clave de reportes y tareas activas.
-- Revisar cronogramas de carga de trabajo de tu equipo.
-- Analizar el rendimiento para detectar cuellos de botella.
-- Recibir alertas críticas.
-</Steps>
+**3. Gestión de Inspecciones y Resolución de Problemas**
 
----
+- Gestiona inspecciones programadas.
+- Asegúrate de que cada problema se resuelva de manera eficiente y oportuna.
 
-## Notas de Precaución
+**4. Uso del Centro de Comando**
+
+- Utiliza el centro de comando para:
+  - Acceder a métricas clave de reportes y tareas activas.
+  - Revisar cronogramas de carga de trabajo de tu equipo técnico.
+  - Analizar el rendimiento y detectar cuellos de botella operativos.
+  - Recibir alertas críticas.
+
+**5. Distribución de Tareas**
+
+- Distribuye tareas entre tu equipo.
+- Mantén la excelencia operativa del hotel.
+
+**6. Liderazgo Técnico**
+
+- Tu liderazgo técnico es crucial.
+- Toma el control y haz la diferencia.
+
+## Cautionary Notes
+
 - Asegúrate de que todas las tareas estén claramente definidas y asignadas.
 - Mantén una comunicación constante con tu equipo para evitar malentendidos.
 
+## Tips for Efficiency
+
+- Revisa las métricas regularmente para identificar áreas de mejora.
+- Prioriza tareas según su urgencia e impacto en el hotel.
+- Fomenta un ambiente de trabajo colaborativo entre los técnicos.
+
 ---
 
-## Consejos para la Eficiencia
-- Revisa las métricas regularmente para identificar áreas de mejora.
-- Prioriza tareas según su urgencia y su impacto en la operación del hotel.
-- Fomenta un ambiente de trabajo colaborativo entre los técnicos.
+## Guía Visual
 
 <iframe
   className="w-full aspect-video rounded-xl"
-  src="https://loom.com/share/c3c4b0030e2840dcbfdd95adb1f93bd1"
-  title="Guía para Jefes Técnicos"
+  src="https://loom.com/embed/c3c4b0030e2840dcbfdd95adb1f93bd1"
+  title="Panel de Jefe Técnico en NEIO"
   frameBorder="0"
   allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
   allowFullScreen
-></iframe>
+  loading="lazy"
+/>
