docs: add technician dashboard guide and update navigation structure

--- a/admin.mdx
+++ b/admin.mdx
@@ -1,5 +1,5 @@
 ---
-title: "SOP · Gestión del Hotel en NEIO"
+title: "SOP · Gestión del Hotel en NEIO como Administrador"
 description: "Guía clara para administradores: cómo usar NEIO para optimizar operaciones y supervisar al personal."
 ---
 
