docs: enhance admin and tech lead guides with interactive components and tooltips

--- a/jefe_tecnico.mdx
+++ b/jefe_tecnico.mdx
@@ -5,58 +5,106 @@ description: "Guía clara para que los jefes técnicos coordinen y gestionen efi
 
 # Procedimiento Operativo Estándar para Jefes Técnicos en Mantenimiento Hotelero
 
+<Info>
+Este SOP guía a los jefes técnicos para coordinar equipos, priorizar tareas y mantener la operación del hotel con altos estándares de calidad y seguridad.
+</Info>
+
 ## Objective
 
 Este SOP proporciona una guía clara para que los jefes técnicos coordinen y gestionen eficientemente el mantenimiento hotelero.
 
 ## Key Steps
 
-**1. Introducción al Panel de Jefe Técnico**
+<Steps titleSize="h3">
+  <Step title="1 · Introducción al Panel de Jefe Técnico" icon="gauge" iconType="solid" stepNumber={1}>
+    <ul>
+      <li>Bienvenido al panel de jefe técnico.</li>
+      <li>Desde aquí coordinarás todo el ecosistema técnico del hotel.</li>
+      <li>Familiarízate con las secciones clave: <em>tareas</em>, <em>inspecciones</em>, <em>reportes</em> y <em>alertas</em>.</li>
+    </ul>
+    <Tip>
+      Añade el panel a tus favoritos del navegador para entrar más rápido al inicio de turno.
+    </Tip>
+  </Step>
 
-- Bienvenido al panel de jefe técnico.
-- Eres el corazón operativo del mantenimiento hotelero.
-- Desde aquí, coordinarás todo el ecosistema técnico de tu hotel.
+  <Step title="2 · Control del Equipo de Mantenimiento" icon="users-gear" iconType="solid" stepNumber={2}>
+    <ul>
+      <li>Asigna y prioriza tareas según criticidad e impacto en huéspedes.</li>
+      <li>Supervisa el trabajo de técnicos y proveedores externos.</li>
+      <li>Equilibra cargas para evitar cuellos de botella.</li>
+    </ul>
+    <Info>
+      Usa filtros por <em>área</em>, <em>turno</em> y <em>estado</em> para detectar rápidamente sobrecarga o bloqueos.
+    </Info>
+  </Step>
 
-**2. Control del Equipo de Mantenimiento**
+  <Step title="3 · Inspecciones y Resolución de Problemas" icon="clipboard-check" iconType="solid" stepNumber={3}>
+    <ul>
+      <li>Gestiona <Tooltip tip="Revisiones periódicas para validar el estado de equipos y áreas.">inspecciones programadas</Tooltip> y correctivas.</li>
+      <li>Asegura tiempos de respuesta acordes a <Tooltip tip="Service Level Agreement: plazos objetivo para atender y resolver.">SLA</Tooltip> y prioridad.</li>
+      <li>Escala incidentes críticos e informa a stakeholders cuando aplique.</li>
+    </ul>
+    <Warning>
+      No cierres inspecciones sin evidencia (fotos/notas). Afecta auditorías y garantías.
+    </Warning>
+  </Step>
 
-- Tienes el control total del equipo de mantenimiento.
-- Tu misión incluye:
-  - Asignar y priorizar tareas.
-  - Supervisar el trabajo de los técnicos.
+  <Step title="4 · Uso del Centro de Comando" icon="chart-line" iconType="solid" stepNumber={4}>
+    <ul>
+      <li>Consulta métricas clave: trabajo activo, cumplimiento de SLA y <Tooltip tip="Trabajo pendiente aún no atendido.">backlog</Tooltip>.</li>
+      <li>Revisa cronogramas de carga por técnico y detecta cuellos de botella.</li>
+      <li>Activa alertas críticas para anticiparte a vencimientos y riesgos.</li>
+    </ul>
+    <Info>
+      Programa una revisión diaria de 10–15 minutos para alinear prioridades con el equipo.
+    </Info>
+  </Step>
 
-**3. Gestión de Inspecciones y Resolución de Problemas**
+  <Step title="5 · Distribución de Tareas" icon="list-check" iconType="solid" stepNumber={5}>
+    <ul>
+      <li>Asigna tareas considerando habilidades, turnos y repuestos disponibles.</li>
+      <li>Comunica claramente el <em>qué</em>, <em>cómo</em> y <em>cuándo</em> de cada intervención.</li>
+    </ul>
+    <Check>
+      Criterio de salida: responsables definidos, plazos acordados y dependencias aclaradas.
+    </Check>
+  </Step>
 
-- Gestiona inspecciones programadas.
-- Asegúrate de que cada problema se resuelva de manera eficiente y oportuna.
+  <Step title="6 · Liderazgo Técnico" icon="screwdriver-wrench" iconType="solid" stepNumber={6}>
+    <ul>
+      <li>Facilita decisiones técnicas, remueve bloqueos y asegura buenas prácticas.</li>
+      <li>Fomenta la documentación: causa raíz, acciones correctivas y preventivas.</li>
+    </ul>
+    <Tip>
+      Implementa <em>post-mortems</em> ligeros en fallas críticas para aprender y evitar recurrencias.
+    </Tip>
+  </Step>
+</Steps>
 
-**4. Uso del Centro de Comando**
-
-- Utiliza el centro de comando para:
-  - Acceder a métricas clave de reportes y tareas activas.
-  - Revisar cronogramas de carga de trabajo de tu equipo técnico.
-  - Analizar el rendimiento y detectar cuellos de botella operativos.
-  - Recibir alertas críticas.
-
-**5. Distribución de Tareas**
-
-- Distribuye tareas entre tu equipo.
-- Mantén la excelencia operativa del hotel.
-
-**6. Liderazgo Técnico**
-
-- Tu liderazgo técnico es crucial.
-- Toma el control y haz la diferencia.
+---
 
 ## Cautionary Notes
 
-- Asegúrate de que todas las tareas estén claramente definidas y asignadas.
-- Mantén una comunicación constante con tu equipo para evitar malentendidos.
+<Warning>
+Asegúrate de que todas las tareas estén claramente definidas, con prioridad y plazo. Evita asignaciones ambiguas.
+</Warning>
+<Info>
+Mantén comunicación constante con tu equipo para prevenir malentendidos y alinear expectativas con Operaciones.
+</Info>
+
+---
 
 ## Tips for Efficiency
 
-- Revisa las métricas regularmente para identificar áreas de mejora.
-- Prioriza tareas según su urgencia e impacto en el hotel.
-- Fomenta un ambiente de trabajo colaborativo entre los técnicos.
+<Tip>
+Revisa métricas a diario y ajusta prioridades según impacto y vencimientos.
+</Tip>
+<Tip>
+Prioriza tareas que reduzcan backlog o riesgo operativo en horas pico del hotel.
+</Tip>
+<Tip>
+Promueve un ambiente colaborativo: actualizaciones breves por turno y evidencia clara en cada cierre.
+</Tip>
 
 ---
 
