--- a/admin.mdx
+++ b/admin.mdx
@@ -5,7 +5,9 @@ description: "Guía clara para administradores: cómo usar NEIO para optimizar o
 
 # Procedimiento Operativo Estándar para la Gestión del Hotel
 
-> NEIO es una plataforma de gestión de mantenimiento diseñada para hoteles, con foco en operación eficiente y experiencia del huésped.
+<Info>
+NEIO es una plataforma de gestión de mantenimiento diseñada para hoteles, con foco en operación eficiente y experiencia del huésped.
+</Info>
 
 ## Objective
 
@@ -13,50 +15,90 @@ Este SOP proporciona una guía clara para administradores sobre cómo utilizar N
 
 ## Key Steps
 
-**1. Bienvenida a la Plataforma** 
+<Steps titleSize="h3">
+  <Step title="1 · Bienvenida a la Plataforma" icon="building" iconType="solid" stepNumber={1}>
+    <ul>
+      <li>Accede a NEIO como administrador.</li>
+      <li>Recorre el centro de mando para una vista integral de mantenimiento, equipos y tareas.</li>
+    </ul>
+    <Tip>
+      Añade la URL del centro de mando a tus favoritos para acceder más rápido al inicio del turno.
+    </Tip>
+  </Step>
 
-- Accede a NEIO como administrador.
-- Recorre el centro de mando para una vista integral de mantenimiento, equipos y tareas.
+  <Step title="2 · Supervisión del Personal" icon="users" iconType="solid" stepNumber={2}>
+    <ul>
+      <li>Supervisa a todo el personal operativo (técnicos, jefes técnicos, camaristas y proveedores externos).</li>
+      <li>Monitorea carga de trabajo y cumplimiento por responsable.</li>
+    </ul>
+    <Info>
+      Usa filtros por área, turno o estado para ubicar rápidamente a quien necesita apoyo.
+    </Info>
+  </Step>
 
-**2. Supervisión del Personal**
+  <Step title="3 · Gestión de Permisos y Configuración" icon="gear" iconType="solid" stepNumber={3}>
+    <ul>
+      <li>Asigna roles y permisos adecuados a cada perfil.</li>
+      <li>Configura pisos, tipos de habitación y áreas comunes según la operación real.</li>
+    </ul>
+    <Warning>
+      Evita roles demasiado amplios. Un <Tooltip tip="Permisos de ver/crear/editar/borrar por módulo.">rol</Tooltip> incorrecto puede causar cambios no deseados.
+    </Warning>
+  </Step>
 
-- Supervisa a todo el personal operativo:
-  - Técnicos
-  - Jefes técnicos
-  - Camaristas
-  - Proveedores externos
+  <Step title="4 · Monitoreo del Estado Operacional" icon="chart-line" iconType="solid" stepNumber={4}>
+    <ul>
+      <li>Mantén visibilidad sobre rendimiento del personal y estado del mantenimiento (activos críticos, backlog).</li>
+      <li>Identifica <Tooltip tip="Trabajo pendiente que aún no se ha completado.">backlog</Tooltip>, riesgos y <Tooltip tip="Compromisos de nivel de servicio: tiempos objetivo para resolver/atender.">SLA</Tooltip> en riesgo.</li>
+      <li>Detecta oportunidades de garantía y control de costos.</li>
+    </ul>
+    <Info>
+      Configura alertas para tareas críticas o próximas a vencer y evita tiempos muertos.
+    </Info>
+  </Step>
 
-**3. Gestión de Permisos y Configuración** 
+  <Step title="5 · Liderazgo y Eficiencia" icon="gauge" iconType="solid" stepNumber={5}>
+    <ul>
+      <li>Utiliza tableros, reportes y alertas para dirigir operaciones.</li>
+      <li>Establece prioridades, <Tooltip tip="Service Level Agreement: plazos objetivo por tipo de trabajo.">SLA</Tooltip> y comunicación entre equipos.</li>
+    </ul>
+    <Check>
+      Criterio de salida: prioridades publicadas, responsables asignados y métricas clave visibles para todos.
+    </Check>
+  </Step>
 
-- Asigna roles y permisos adecuados a cada perfil.
-- Configura cada espacio del hotel (pisos, habitaciones, áreas comunes) según la operación real.
+  <Step title="6 · Exploración de la Plataforma" icon="compass" iconType="solid" stepNumber={6}>
+    <ul>
+      <li>Explora y prueba funcionalidades clave (órdenes de trabajo, mantenimientos programados, inventario).</li>
+      <li>Implementa mejoras rápidas (nomenclaturas, plantillas, checklist).</li>
+    </ul>
+    <Tip>
+      Estandariza nombres y categorías para obtener reportes consistentes entre propiedades.
+    </Tip>
+  </Step>
+</Steps>
 
-**4. Monitoreo del Estado Operacional** 
-
-- Mantén visibilidad del estado operacional:
-  - Rendimiento del personal
-  - Backlog y estado del mantenimiento
-  - Oportunidades de garantía y costos
-
-**5. Liderazgo y Eficiencia** 
-
-- Utiliza tableros, reportes y alertas para dirigir operaciones.
-- Establece prioridades, SLA y comunicación entre equipos.
-
-**6. Exploración de la Plataforma**
-
-- Explora y prueba funcionalidades clave (órdenes de trabajo, mantenimientos programados, inventario).
-- Implementa mejoras rápidas (nomenclaturas, plantillas, checklist).
+---
 
 ## Cautionary Notes
 
-- Asegúrate de contar con permisos adecuados antes de modificar la configuración del hotel.
-- Mantén comunicación constante con el personal para alinear expectativas y flujos de trabajo.
+<Warning>
+Asegúrate de contar con permisos adecuados antes de modificar la configuración del hotel.
+</Warning>
+<Info>
+Mantén comunicación constante con el personal para alinear expectativas y flujos de trabajo.
+</Info>
+
+---
 
 ## Tips for Efficiency
 
-- Revisa periódicamente el rendimiento del personal y el cumplimiento de SLA para detectar oportunidades de mejora.
-- Usa reportes y paneles de NEIO para tomar decisiones informadas y priorizar tareas de alto impacto.
+<Tip>
+Revisa periódicamente el rendimiento del personal y el cumplimiento de <Tooltip tip="Service Level Agreement.">SLA</Tooltip> para detectar oportunidades de mejora.
+</Tip>
+<Tip>
+Usa reportes y paneles de NEIO para tomar decisiones informadas y priorizar tareas de alto impacto.
+</Tip>
 
 ---
 
@@ -69,4 +111,5 @@ Este SOP proporciona una guía clara para administradores sobre cómo utilizar N
   frameBorder="0"
   allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
   allowFullScreen
-></iframe>
+  loading="lazy"
+/>
