--- a/tecnico.mdx
+++ b/tecnico.mdx
@@ -1,82 +1,77 @@
 ---
-title: "SOP · Uso del Dashboard Técnico"
-description: "Pasos claros para que técnicos gestionen tareas y mantengan el hotel funcionando eficientemente."
+title: "SOP · Proveedores Externos en NEIO"
+description: "Guía clara para que proveedores externos ejecuten servicios técnicos de forma eficiente y profesional."
 ---
 
-# Procedimiento Operativo Estándar para el Uso del Dashboard Técnico
+# Procedimiento Operativo Estándar para Proveedores Externos
 
 <Info>
-Este SOP te guía para gestionar tus tareas y mantener el hotel operando de forma eficiente usando el dashboard técnico.
+Este SOP guía a los proveedores externos para entregar servicios técnicos con calidad, seguridad y comunicación efectiva con el hotel.
 </Info>
+
+## Objective
+
+Este SOP proporciona una guía clara para que los proveedores externos ejecuten servicios técnicos en el hotel de manera eficiente y profesional.
 
 ## Key Steps
 
 <Steps titleSize="h3">
-  <Step title="1 · Acceso al Dashboard Técnico" icon="gauge" iconType="solid" stepNumber={1}>
+  <Step title="1 · Acceso al Portal de Proveedor" icon="right-to-bracket" iconType="solid" stepNumber={1}>
     <ul>
-      <li>Inicia sesión en tu dashboard técnico.</li>
-      <li>Familiarízate con la interfaz y las secciones disponibles.</li>
-    </ul>
-    <Tip>
-      Agrega el dashboard a tus favoritos del navegador para entrar más rápido al inicio de turno.
-    </Tip>
-  </Step>
-
-  <Step title="2 · Estadísticas de Rendimiento" icon="chart-line" iconType="solid" stepNumber={2}>
-    <ul>
-      <li>Revisa tus <Tooltip tip="Indicadores como tareas completadas, tiempos de respuesta y cumplimiento de SLA.">estadísticas de rendimiento</Tooltip>.</li>
-      <li>Observa el balance entre tareas completadas y pendientes.</li>
-    </ul>
-    <Info>
-      Si detectas caídas en rendimiento, revisa las categorías de tareas con más retrasos y ajusta prioridades.
-    </Info>
-  </Step>
-
-  <Step title="3 · Gestión de Tareas" icon="list-check" iconType="solid" stepNumber={3}>
-    <ul>
-      <li>Mantén actualizados el estado y las notas de cada tarea.</li>
-      <li>Usa <Tooltip tip="Acciones directas como crear reporte, abrir garantía o marcar avance.">acciones rápidas</Tooltip> para ganar tiempo.</li>
+      <li>Inicia sesión en tu portal de proveedor externo.</li>
+      <li>Verifica que cuentas con <Tooltip tip="Usuario y contraseña autorizados por el hotel/NEIO. No los compartas.">credenciales válidas</Tooltip>.</li>
     </ul>
     <Warning>
-      No cierres tareas sin evidencia o nota técnica. Afecta reportes y auditorías.
+      No compartas tus accesos. Activa doble verificación si está disponible.
     </Warning>
   </Step>
 
-  <Step title="4 · Documentación del Trabajo" icon="camera" iconType="solid" stepNumber={4}>
+  <Step title="2 · Navegación del Dashboard" icon="gauge" iconType="solid" stepNumber={2}>
     <ul>
-      <li>Documenta con notas y fotos el <em>antes</em> y <em>después</em> de cada intervención.</li>
-      <li>Adjunta números de serie o consumibles usados cuando aplique.</li>
-    </ul>
-    <Info>
-      La buena documentación acelera garantías y reduce retrabajos.
-    </Info>
-  </Step>
-
-  <Step title="5 · Inspecciones Asignadas" icon="clipboard-list" iconType="solid" stepNumber={5}>
-    <ul>
-      <li>Entra a <strong>Mis pendientes</strong> para ver tareas e inspecciones asignadas.</li>
-      <li>Filtra por prioridad y fecha de vencimiento para atacar primero lo crítico.</li>
-    </ul>
-  </Step>
-
-  <Step title="6 · Exploración del Dashboard" icon="compass" iconType="solid" stepNumber={6}>
-    <ul>
-      <li>Recorre cada sección para entender todas las funcionalidades disponibles.</li>
-      <li>Identifica vistas, filtros y atajos que más uses en tu día a día.</li>
+      <li>Revisa las métricas clave:
+        <ul>
+          <li>Trabajos completados</li>
+          <li><Tooltip tip="Trabajos con cobertura de garantía vigente por parte del proveedor.">Garantías vigentes</Tooltip></li>
+          <li>Tareas pendientes</li>
+        </ul>
+      </li>
+      <li>Identifica prioridades y fechas próximas a vencer.</li>
     </ul>
     <Tip>
-      Guarda tus filtros favoritos para repetir búsquedas en un click.
+      Ancla el dashboard a tus favoritos para acceder en segundos al inicio de cada servicio.
     </Tip>
   </Step>
 
-  <Step title="7 · Gestión de Tareas Técnicas" icon="screwdriver-wrench" iconType="solid" stepNumber={7}>
+  <Step title="3 · Gestión de Tareas Asignadas" icon="clipboard-list" iconType="solid" stepNumber={3}>
     <ul>
-      <li>Planifica tu día priorizando tareas por impacto y SLA.</li>
-      <li>Confirma bloqueos (accesos, repuestos) antes de comenzar para evitar tiempos muertos.</li>
+      <li>Accede a la lista de <Tooltip tip="Órdenes de trabajo asignadas por el hotel, con alcance, ubicación y contacto.">trabajos asignados (OT)</Tooltip>.</li>
+      <li>Consulta la información técnica, manuales y repuestos requeridos antes de desplazarte.</li>
     </ul>
     <Check>
-      Criterio de salida: todas las tareas con estado actualizado, notas claras y evidencia cargada.
+      Criterio de salida: alcance validado, insumos confirmados y horario acordado con el contacto del hotel.
     </Check>
+  </Step>
+
+  <Step title="4 · Actualización del Estado de Tareas" icon="arrows-rotate" iconType="solid" stepNumber={4}>
+    <ul>
+      <li>Actualiza el estado en tiempo real (en curso, en espera, resuelto).</li>
+      <li>Registra tiempos y bloqueos para respetar <Tooltip tip="Service Level Agreement: plazos objetivo para atender y resolver.">SLA</Tooltip>.</li>
+      <li>Comunica avances relevantes al punto de contacto del hotel.</li>
+    </ul>
+    <Info>
+      Usa notas breves y claras; ahorra tiempo a Operaciones y evita retrabajos.
+    </Info>
+  </Step>
+
+  <Step title="5 · Profesionalismo y Calidad" icon="handshake" iconType="solid" stepNumber={5}>
+    <ul>
+      <li>Cumple estándares de seguridad, orden y limpieza durante cada intervención.</li>
+      <li>Entrega evidencia completa: fotos <em>antes/después</em> y notas técnicas.</li>
+      <li>Indica si aplica garantía y el periodo de cobertura.</li>
+    </ul>
+    <Warning>
+      No cierres trabajos sin evidencia. Afecta auditorías, garantías y pagos.
+    </Warning>
   </Step>
 </Steps>
 
@@ -85,11 +80,10 @@ Este SOP te guía para gestionar tus tareas y mantener el hotel operando de form
 ## Cautionary Notes
 
 <Warning>
-Revisa tus tareas <strong>a diario</strong> para evitar pendientes acumulados.
+No compartas credenciales y cierra sesión al terminar. Verifica la información técnica antes de iniciar cada trabajo.
 </Warning>
-
 <Info>
-Mantén la documentación actualizada para prevenir confusiones y facilitar auditorías.
+Si detectas riesgos de seguridad o falta de insumos, <strong>detén</strong> la intervención y comunica de inmediato al hotel.
 </Info>
 
 ---
@@ -97,10 +91,10 @@ Mantén la documentación actualizada para prevenir confusiones y facilitar audi
 ## Tips for Efficiency
 
 <Tip>
-Configura recordatorios para actualizar tareas al final de cada intervención.
+Configura recordatorios para tareas pendientes y fechas de garantía.
 </Tip>
 <Tip>
-Usa la evidencia (notas y fotos) para mejorar la comunicación con tu equipo y acelerar aprobaciones.
+Comunica retrasos o incidentes al hotel en cuanto ocurran para reprogramar sin fricciones.
 </Tip>
 
 ---
@@ -109,8 +103,8 @@ Usa la evidencia (notas y fotos) para mejorar la comunicación con tu equipo y a
 
 <iframe
   className="w-full aspect-video rounded-xl"
-  src="https://loom.com/embed/92a70de03d4047bab6dc27858e845919"
-  title="Dashboard Técnico"
+  src="https://loom.com/embed/324d415cc0e3490196b099e670f721f0"
+  title="Portal de Proveedor Externo en NEIO"
   frameBorder="0"
   allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
   allowFullScreen
