fix: correct iframe closing tag syntax and improve list formatting

--- a/proveedor.mdx
+++ b/proveedor.mdx
@@ -13,7 +13,7 @@ description: "Guía clara para que proveedores externos ejecuten servicios técn
   allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
   allowFullScreen
   loading="lazy"
-/>
+></iframe>
 
 # Procedimiento Operativo Estándar para Proveedores Externos
 
@@ -40,7 +40,8 @@ Este SOP proporciona una guía clara para que los proveedores externos ejecuten 
 
   <Step title="2 · Navegación del Dashboard" icon="gauge" iconType="solid" stepNumber={2}>
     <ul>
-      <li>Revisa las métricas clave:
+      <li>
+        Revisa las métricas clave:
         <ul>
           <li>Trabajos completados</li>
           <li><Tooltip tip="Trabajos con cobertura de garantía vigente por parte del proveedor.">Garantías vigentes</Tooltip></li>
