Documentation edits made through Mintlify web editor

--- a/admin.mdx
+++ b/admin.mdx
@@ -1,24 +1,16 @@
 ---
 title: "SOP · Gestión del Hotel en NEIO como Administrador"
-description: "Guía clara para administradores: cómo usar NEIO para optimizar operaciones y supervisar al personal."
+description: "Guía clara para administradores: cómo usar NEIO para optimizar operaciones y supervisar al personal. "
 ---
 
 ## Guía Visual
 
-<iframe
-  className="w-full aspect-video rounded-xl"
-  src="https://loom.com/embed/d7c90d14e64a428dbe62e74b90271345"
-  title="Configuración de hotel en NEIO"
-  frameBorder="0"
-  allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-  allowFullScreen
-  loading="lazy"
-/>
+<iframe className="w-full aspect-video rounded-xl" src="https://loom.com/embed/d7c90d14e64a428dbe62e74b90271345" title="Configuración de hotel en NEIO" frameBorder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowFullScreen loading="lazy" />
 
 # Procedimiento Operativo Estándar para la Gestión del Hotel
 
 <Info>
-NEIO es una plataforma de gestión de mantenimiento diseñada para hoteles, con foco en operación eficiente y experiencia del huésped.
+  NEIO es una plataforma de gestión de mantenimiento diseñada para hoteles, con foco en operación eficiente y experiencia del huésped.
 </Info>
 
 ## Objective
@@ -27,62 +19,76 @@ Este SOP proporciona una guía clara para administradores sobre cómo utilizar N
 
 ## Key Steps
 
-<Steps titleSize="h3">
-  <Step title="1 · Bienvenida a la Plataforma" icon="building" iconType="solid" stepNumber={1}>
+<Steps>
+  <Step title="1 · Bienvenida a la Plataforma" icon="building" iconType="solid">
     <ul>
-      <li>Accede a NEIO como administrador.</li>
-      <li>Recorre el centro de mando para una vista integral de mantenimiento, equipos y tareas.</li>
+    <li>
+    Accede a NEIO como administrador.
+    </li>
+    <li>
+    Recorre el centro de mando para una vista integral de mantenimiento, equipos y tareas.
+    </li>
     </ul>
     <Tip>
       Añade la URL del centro de mando a tus favoritos para acceder más rápido al inicio del turno.
     </Tip>
   </Step>
-
-  <Step title="2 · Supervisión del Personal" icon="users" iconType="solid" stepNumber={2}>
+  <Step title="2 · Supervisión del Personal" icon="users" iconType="solid">
     <ul>
-      <li>Supervisa a todo el personal operativo (técnicos, jefes técnicos, camaristas y proveedores externos).</li>
-      <li>Monitorea carga de trabajo y cumplimiento por responsable.</li>
+    <li>
+    Supervisa a todo el personal operativo (técnicos, jefes técnicos, camaristas y proveedores externos).
+    </li>
+    <li>
+    Monitorea carga de trabajo y cumplimiento por responsable.
+    </li>
     </ul>
     <Info>
       Usa filtros por área, turno o estado para ubicar rápidamente a quien necesita apoyo.
     </Info>
   </Step>
-
-  <Step title="3 · Gestión de Permisos y Configuración" icon="gear" iconType="solid" stepNumber={3}>
+  <Step title="3 · Gestión de Permisos y Configuración" icon="gear" iconType="solid">
     <ul>
-      <li>Asigna roles y permisos adecuados a cada perfil.</li>
-      <li>Configura pisos, tipos de habitación y áreas comunes según la operación real.</li>
+    <li>
+    Asigna roles y permisos adecuados a cada perfil.
+    </li>
+    <li>
+    Configura pisos, tipos de habitación y áreas comunes según la operación real.</li>
     </ul>
     <Warning>
       Evita roles demasiado amplios. Un <Tooltip tip="Permisos de ver/crear/editar/borrar por módulo.">rol</Tooltip> incorrecto puede causar cambios no deseados.
     </Warning>
   </Step>
-
-  <Step title="4 · Monitoreo del Estado Operacional" icon="chart-line" iconType="solid" stepNumber={4}>
+  <Step title="4 · Monitoreo del Estado Operacional" icon="chart-line" iconType="solid">
     <ul>
-      <li>Mantén visibilidad sobre rendimiento del personal y estado del mantenimiento (activos críticos, backlog).</li>
-      <li>Identifica <Tooltip tip="Trabajo pendiente que aún no se ha completado.">backlog</Tooltip>, riesgos y <Tooltip tip="Compromisos de nivel de servicio: tiempos objetivo para resolver/atender.">SLA</Tooltip> en riesgo.</li>
-      <li>Detecta oportunidades de garantía y control de costos.</li>
+    <li>
+    Mantén visibilidad sobre rendimiento del personal y estado del mantenimiento (activos críticos, backlog).</li>
+    <li>
+    Identifica backlog, riesgos y SLA en riesgo.</li>
+    <li>
+    Detecta oportunidades de garantía y control de costos.</li>
     </ul>
     <Info>
       Configura alertas para tareas críticas o próximas a vencer y evita tiempos muertos.
     </Info>
   </Step>
-
-  <Step title="5 · Liderazgo y Eficiencia" icon="gauge" iconType="solid" stepNumber={5}>
+  <Step title="5 · Liderazgo y Eficiencia" icon="gauge" iconType="solid">
     <ul>
-      <li>Utiliza tableros, reportes y alertas para dirigir operaciones.</li>
-      <li>Establece prioridades, <Tooltip tip="Service Level Agreement: plazos objetivo por tipo de trabajo.">SLA</Tooltip> y comunicación entre equipos.</li>
+    <li>
+    Utiliza tableros, reportes y alertas para dirigir operaciones.</li>
+    <li>
+    Establece prioridades, SLA y comunicación entre equipos.
+    </li>
     </ul>
     <Check>
       Criterio de salida: prioridades publicadas, responsables asignados y métricas clave visibles para todos.
     </Check>
   </Step>
-
-  <Step title="6 · Exploración de la Plataforma" icon="compass" iconType="solid" stepNumber={6}>
+  <Step title="6 · Exploración de la Plataforma" icon="compass" iconType="solid">
     <ul>
-      <li>Explora y prueba funcionalidades clave (órdenes de trabajo, mantenimientos programados, inventario).</li>
-      <li>Implementa mejoras rápidas (nomenclaturas, plantillas, checklist).</li>
+    <li>
+    Explora y prueba funcionalidades clave (órdenes de trabajo, mantenimientos programados, inventario).</li>
+    <li>
+    Implementa mejoras rápidas (nomenclaturas, plantillas, checklist).</li>
     </ul>
     <Tip>
       Estandariza nombres y categorías para obtener reportes consistentes entre propiedades.
@@ -95,10 +101,11 @@ Este SOP proporciona una guía clara para administradores sobre cómo utilizar N
 ## Cautionary Notes
 
 <Warning>
-Asegúrate de contar con permisos adecuados antes de modificar la configuración del hotel.
+  Asegúrate de contar con permisos adecuados antes de modificar la configuración del hotel.
 </Warning>
+
 <Info>
-Mantén comunicación constante con el personal para alinear expectativas y flujos de trabajo.
+  Mantén comunicación constante con el personal para alinear expectativas y flujos de trabajo.
 </Info>
 
 ---
@@ -106,10 +113,11 @@ Mantén comunicación constante con el personal para alinear expectativas y fluj
 ## Tips for Efficiency
 
 <Tip>
-Revisa periódicamente el rendimiento del personal y el cumplimiento de <Tooltip tip="Service Level Agreement.">SLA</Tooltip> para detectar oportunidades de mejora.
+  Revisa periódicamente el rendimiento del personal y el cumplimiento de <Tooltip tip="Service Level Agreement.">SLA</Tooltip> para detectar oportunidades de mejora.
 </Tip>
+
 <Tip>
-Usa reportes y paneles de NEIO para tomar decisiones informadas y priorizar tareas de alto impacto.
+  Usa reportes y paneles de NEIO para tomar decisiones informadas y priorizar tareas de alto impacto.
 </Tip>
 
 ---
