--- a/admin.mdx
+++ b/admin.mdx
@@ -52,7 +52,8 @@ Este SOP proporciona una guía clara para administradores sobre cómo utilizar N
     Asigna roles y permisos adecuados a cada perfil.
     </li>
     <li>
-    Configura pisos, tipos de habitación y áreas comunes según la operación real.</li>
+    Configura pisos, tipos de habitación y áreas comunes según la operación real.
+    </li>
     </ul>
     <Warning>
       Evita roles demasiado amplios. Un <Tooltip tip="Permisos de ver/crear/editar/borrar por módulo.">rol</Tooltip> incorrecto puede causar cambios no deseados.
@@ -61,11 +62,14 @@ Este SOP proporciona una guía clara para administradores sobre cómo utilizar N
   <Step title="4 · Monitoreo del Estado Operacional" icon="chart-line" iconType="solid">
     <ul>
     <li>
-    Mantén visibilidad sobre rendimiento del personal y estado del mantenimiento (activos críticos, backlog).</li>
+    Mantén visibilidad sobre rendimiento del personal y estado del mantenimiento (activos críticos, backlog).
+    </li>
     <li>
-    Identifica backlog, riesgos y SLA en riesgo.</li>
+    Identifica backlog, riesgos y SLA en riesgo.
+    </li>
     <li>
-    Detecta oportunidades de garantía y control de costos.</li>
+    Detecta oportunidades de garantía y control de costos.
+    </li>
     </ul>
     <Info>
       Configura alertas para tareas críticas o próximas a vencer y evita tiempos muertos.
@@ -74,7 +78,8 @@ Este SOP proporciona una guía clara para administradores sobre cómo utilizar N
   <Step title="5 · Liderazgo y Eficiencia" icon="gauge" iconType="solid">
     <ul>
     <li>
-    Utiliza tableros, reportes y alertas para dirigir operaciones.</li>
+    Utiliza tableros, reportes y alertas para dirigir operaciones.
+    </li>
     <li>
     Establece prioridades, SLA y comunicación entre equipos.
     </li>
