docs: improve formatting of key functionality and quick improvements list items

--- a/admin.mdx
+++ b/admin.mdx
@@ -91,9 +91,11 @@ Este SOP proporciona una guía clara para administradores sobre cómo utilizar N
   <Step title="6 · Exploración de la Plataforma" icon="compass" iconType="solid">
     <ul>
     <li>
-    Explora y prueba funcionalidades clave (órdenes de trabajo, mantenimientos programados, inventario).</li>
+    Explora y prueba funcionalidades clave (órdenes de trabajo, mantenimientos programados, inventario).
+    </li>
     <li>
-    Implementa mejoras rápidas (nomenclaturas, plantillas, checklist).</li>
+    Implementa mejoras rápidas (nomenclaturas, plantillas, checklist).
+    </li>
     </ul>
     <Tip>
       Estandariza nombres y categorías para obtener reportes consistentes entre propiedades.
