docs: update titles and descriptions for Spanish localization of AI tools and settings pages

--- a/essentials/navigation.mdx
+++ b/essentials/navigation.mdx
@@ -1,7 +1,7 @@
 ---
-title: 'Navigation'
-description: 'The navigation field in docs.json defines the pages that go in the navigation menu'
-icon: 'map'
+title: 'Configuración del usuario'
+description: 'Configura el perfil de un usuario'
+icon: 'user'
 ---
 
 The navigation menu is the list of links on every website.
