--- a/essentials/settings.mdx
+++ b/essentials/settings.mdx
@@ -1,6 +1,6 @@
 ---
-title: 'Global Settings'
-description: 'Mintlify gives you complete control over the look and feel of your documentation using the docs.json file'
+title: 'Configuración del Hotel'
+description: 'Configura el hotel'
 icon: 'gear'
 ---
 
