docs: capitalize 'Usuario' in navigation title

--- a/essentials/navigation.mdx
+++ b/essentials/navigation.mdx
@@ -1,5 +1,5 @@
 ---
-title: 'Configuración del usuario'
+title: 'Configuración del Usuario'
 description: 'Configura el perfil de un usuario'
 icon: 'user'
 ---
