docs: add upcoming AI tools pages with development timelines and features

--- a/ai-tools/cursor.mdx
+++ b/ai-tools/cursor.mdx
@@ -4,4 +4,38 @@ description: "Descubre cómo usar la IA para resolver tareas"
 icon: "asterisk"
 ---
 
-# Soon
+# Próximamente: IA para Tareas
+
+<Note>
+  Esta funcionalidad estará disponible el 15 de septiembre de 2025.
+</Note>
+
+## Cronograma de Implementación
+
+<Steps>
+  <Step title="Definición de Requisitos">
+    Completado el 5 de agosto de 2025
+  </Step>
+  <Step title="Selección de Modelos de IA">
+    Completado el 12 de agosto de 2025
+  </Step>
+  <Step title="Integración con Sistema de Tareas">
+    Completado el 18 de agosto de 2025
+  </Step>
+  <Step title="Fase de Pruebas">
+    En progreso (22 de agosto - 8 de septiembre)
+  </Step>
+  <Step title="Optimización y Ajustes">
+    Programado (9 - 14 de septiembre)
+  </Step>
+  <Step title="Lanzamiento al Público">
+    15 de septiembre de 2025
+  </Step>
+</Steps>
+
+## Funcionalidades Destacadas
+
+- Asignación automática de tareas basada en IA
+- Priorización inteligente de actividades
+- Recomendaciones personalizadas
+- Análisis predictivo de tiempos de ejecución
