Added SOP to the index and forced redeploy

--- a/index.mdx
+++ b/index.mdx
@@ -1,5 +1,5 @@
 ---
-title: "Guía de Configuración del Hotel"
+title: "SOP · Guía de Configuración del Hotel"
 description: "Procedimiento paso a paso para configurar tu hotel en Neio.io"
 ---
 
