--- a/ai-tools/ai-textos.mdx
+++ b/ai-tools/ai-textos.mdx
@@ -1,4 +1,44 @@
+---
+title: "Asistente AI · Generación de Texto"
+description: "Crea mensajes, respuestas y contenido útil para tu hotel con IA, en minutos y sin tecnicismos."
+---
 
+
+# ¿Qué hace?
+<Info>
+Un asistente que redacta **mensajes a huéspedes**, **comunicados internos**, **descripciones** y **resúmenes**. Solo le dices qué necesitas y el tono, y te entrega un borrador listo para enviar.
+</Info>
+
+
+## Beneficios
+- **Ahorra tiempo:** escribe por ti en segundos.
+- **Mejor tono:** mensajes claros, empáticos y consistentes.
+- **Multiidioma:** puedes pedirlo en español o inglés.
+
+
+## Cómo usarlo
+<Steps>
+<Step title="1 · Abre AI Textos" icon="pen" iconType="solid">
+Desde el panel, entra a **AI Textos**.
+</Step>
+<Step title="2 · Pide lo que necesitas" icon="message-circle" iconType="solid">
+Ejemplos: *“Responde a un huésped por ruido en la madrugada”*, *“Escribe un aviso breve por mantenimiento de alberca”*.
+</Step>
+<Step title="3 · Ajusta el tono" icon="sparkles" iconType="solid">
+Pide **formal**, **amigable** o **profesional**. También puedes pedir versión corta/larga.
+</Step>
+<Step title="4 · Copia y comparte" icon="clipboard" iconType="solid">
+Revisa el texto, personaliza detalles y **cópialo** para enviarlo por tu canal favorito.
+</Step>
+</Steps>
+
+
+## Ejemplos rápidos
+```text
+“Redacta un mensaje amable para avisar al huésped que la habitación estará lista a las 2 pm.”
+“Escribe un comunicado interno para recordar el uso del uniforme en turno matutino.”
+“Resume en 5 puntos las quejas más comunes de esta semana.”
+```
 <div style={{display: 'flex', flexDirection: 'column', gap: '20px'}}>
   <img src="/images/texto ai.png" alt="Interfaz de generación de texto 1" style={{maxWidth: '100%', borderRadius: '8px'}} />
   <img src="/images/texto ai2.png" alt="Interfaz de generación de texto 2" style={{maxWidth: '100%', borderRadius: '8px'}} />
@@ -9,3 +49,10 @@
 ## Consejos
 <Tip>Indica **para quién es** el mensaje (huésped, proveedor, equipo) y el **objetivo** (informar, disculpa, recordatorio).</Tip>
 <Tip>Si el mensaje es sensible, añade contexto: reserva, fechas, áreas afectadas.</Tip>
+
+
+## FAQ
+**¿Puedo guardar plantillas?** Sí, duplica el mejor texto y úsalo de base.
+
+
+---
